px4_ws/logs/rgbd_slam/build.make.003.log.stderr
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:24:27: error: expected initializer before '<<' token
 const Matrix4f UAV2CAMERA << 0,0,1,0,-1,0,0,0,0,-1,0,0, 0,0,0,1;
                           ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
